chrome/browser/resources/contextual_tasks/composebox.css
/* ... */
:host([is-zero-state]) #contextualTasksSuggestionsContainer::part(match-icon-container) {
  height: 24px;
  /* Keep in mind .flex-container and the outer suggestions container
   * indentation when changing this. */
  padding-inline-end: 8px;
  /* This + 8px from suggestion container's
   * indent start = 16px. */
  padding-inline-start: 8px;
  width: 24px;
}

:host([is-zero-state][is-side-panel])
    #contextualTasksSuggestionsContainer::part(match-icon-container) {
  padding-inline-end: 12px;
}

:host([is-zero-state]) #contextualTasksSuggestionsContainer::part(match-icon) {
  background-color: var(--color-zero-state-match-icon);
  height: 20px;
  margin: 2px;
  width: 20px;
}

:host([is-zero-state]) #contextualTasksSuggestionsContainer::part(match-text-container) {
  border-radius: 4px;
  color: var(--color-zero-state-match-text);
  font-family: var(--google-sans-font);
  font-size: 16px;
  letter-spacing: 1%;
  inset-inline-start: 12px;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

/* 'loading-bar-color-change' must be defined in child component
 * the animation modifies.
 */
:host([is-zero-state][is-loading_]) #contextualTasksSuggestionsContainer::part(match-text-container) {
  animation: 2s loading-bar-color-change calc(0.1s * var(--loading-bar-animation-delay))
      infinite;
  background-color: var(--color-composebox-loading-start);
}

:host(:not([is-side-panel])[is-zero-state])
    #contextualTasksSuggestionsContainer::part(match-text-container) {
  inset-inline-start: 8px;
  width: calc(100% - 8px);
}

:host([is-zero-state])
    #contextualTasksSuggestionsContainer::part(match-remove-button) {
  --cr-composebox-dropdown-match-margin-end: -8px;
  --cr-composebox-dropdown-match-margin-start: 16px;
  --cr-composebox-match-remove-button-top: 0;
  display: none;
}

#suggestionActivity {
  color: var(--color-composebox-suggestion-activity);
  display: flex;
  font-family: var(--google-sans-font);
  font-size: 12px;
  font-weight: 400;
  justify-content: flex-start;
  line-height: 16px;
  padding-bottom: 10px;
  padding-inline-end: 8px;
  padding-inline-start: 20px;
  padding-top: 8px;
  position: relative;
}

:host:has(#composebox:not([show-dropdown_])) #contextualTasksSuggestionsContainer {
  display: none;
}

/* Needed for space between header and composebox. */
:host:has(#composebox:not([show-dropdown_])) #composebox {
  margin-top: 24px;
}

