[146] [contextual tasks] fix shift when suggestions are hidden
Original change's description:
> [contextual tasks] fix shift when suggestions are hidden
> 
> * Previously, the composebox would shift downwards when suggestions are
>   hidden in full tab mode
> * This CL only allows margin add in side panel, where it is bottom
>   anchored instead of top anchored. bottom anchoring allows for
>   the composebox to not shift, but to push the header upwards
> * there is no need this top margin due to other header formatting
>   in full tab allowing for space
> 
> side panel still works -
> 
> Before: 
> https: //screencast.googleplex.com/cast/NTQ1MDk2OTg4MDk4NTYwMHwzMjAwNThjMS1jYg
> Demo: 
> https: //screencast.googleplex.com/cast/NjIxMjI3OTMwODY0ODQ0OHxlYzIwZGUwMy0xZQ
> https: //screenshot.googleplex.com/BSPF6pwxFr4cp5M
> Bug: b:490109101
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7639266
> Commit-Queue: James Leung <jamesleung@google.com>
> Cr-Commit-Position: refs/heads/main@{#1595021}

Bug: 490506236
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7646518
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7680@{#2161}
Cr-Branched-From: 76b7d80e5cda23fe6537eed26d68c92e995c7f39-refs/heads/main@{#1582197}

--- a/chrome/browser/resources/contextual_tasks/composebox.css
+++ b/chrome/browser/resources/contextual_tasks/composebox.css
@@ -586,6 +586,6 @@
 }
 
 /* Needed for space between header and composebox. */
-:host:has(#composebox:not([show-dropdown_])) #composebox {
+:host([is-side-panel]) #composebox:not([show-dropdown_]) #composebox {
   margin-top: 24px;
 }
